[tool.poetry]
name = "mango-unchained"
version = "0.1.0"
description = ""
authors = ["WillTarran <will.tarran@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pyoverchain = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
